--- a/src/tarea5/FXMLDocument.fxml
+++ b/src/tarea5/FXMLDocument.fxml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="580.0" prefWidth="778.0" style="-fx-background-color: #6699FF;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="tarea5.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="anchorPanePrincipal" prefHeight="580.0" prefWidth="778.0" style="-fx-background-color: #6699FF;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tarea5.FXMLDocumentController">
     <children>
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="14.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Libre.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="195.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Ocupada.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="400.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Reservada.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="598.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="14.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="195.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="400.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="137.0" fitWidth="166.0" layoutX="598.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true" />
+      <Pane fx:id="mesasPanel" layoutX="15.0" layoutY="14.0" prefHeight="476.0" prefWidth="795.0" style="-fx-background-color: #CC99CC;">
+         <children>
+            <ImageView fx:id="table1ImageView" fitHeight="137.0" fitWidth="166.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table5ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="164.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table2ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="368.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table6ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="534.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table3ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="7.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table7ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="202.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table8ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="415.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="table4ImageView" fitHeight="137.0" fitWidth="166.0" layoutX="581.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
