--- a/src/tarea5/Cuenta.fxml
+++ b/src/tarea5/Cuenta.fxml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="552.0" prefWidth="496.0" style="-fx-background-color: #6699FF;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tarea5.CuentaController">
+<AnchorPane id="AnchorPane" prefHeight="552.0" prefWidth="496.0" style="-fx-background-color: #6699FF;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tarea5.CuentaController">
    <children>
       <Label layoutX="38.0" layoutY="38.0" prefHeight="17.0" prefWidth="43.0" text="Menú:" />
-      <TextField fx:id="textFieldMenu" layoutX="38.0" layoutY="55.0" prefHeight="25.0" prefWidth="177.0" />
-      <TableView layoutX="38.0" layoutY="98.0" prefHeight="337.0" prefWidth="293.0">
+      <TableView fx:id="tableProductos" layoutX="38.0" layoutY="98.0" prefHeight="337.0" prefWidth="293.0">
         <columns>
-          <TableColumn prefWidth="188.0" text="Producto" />
-          <TableColumn prefWidth="104.0" text="Precio" />
+          <TableColumn fx:id="tableColumnProducto" prefWidth="188.0" text="Producto" />
+          <TableColumn fx:id="tableColumnPrecio" prefWidth="104.0" text="Precio" />
         </columns>
       </TableView>
       <Button layoutX="351.0" layoutY="445.0" mnemonicParsing="false" text="Pagar" />
       <Label layoutX="165.0" layoutY="449.0" prefHeight="17.0" prefWidth="47.0" text="Total:  ₡" />
       <Label layoutX="220.0" layoutY="449.0" prefHeight="17.0" prefWidth="110.0" />
       <Button layoutX="430.0" layoutY="513.0" mnemonicParsing="false" text="Volver" />
+      <ComboBox fx:id="comboBoxMenu" layoutX="38.0" layoutY="64.0" prefHeight="25.0" prefWidth="243.0" />
    </children>
 </AnchorPane>
